add messages whitepaper

--- a/new_distribution/whitepaper/Makefile
+++ b/new_distribution/whitepaper/Makefile
@@ -2,9 +2,9 @@
 .PHONY: all clean
 
 #add dependencies here (.dia files are automatically converted to .png if dia is installed)
-DEPS := whitepaper.txt block-diagram.png sp_raw_pub_sub.png com_pgm.png Makefile
+DEPS := whitepaper.txt messages.txt block-diagram.png sp_raw_pub_sub.png com_pgm.png Makefile
 
-default: whitepaper.pdf
+default: all
 
 help:
 	echo "Some available targets:"
@@ -12,7 +12,7 @@ help:
 	echo "   whitepaper.html - build single page html" 
 	echo " Check the Makefile for other targets"
 
-all: whitepaper.pdf whitepaper.html
+all: whitepaper.pdf whitepaper.html messages.pdf messages.html
 
 
 vpath %.dia images
@@ -21,12 +21,21 @@ vpath %.dia images
 
 
 whitepaper.pdf: $(DEPS)
-	echo "Building pdf"
-	a2x -L -f pdf -d book --xsltproc-opts="--stringparam section.autolabel 1 --stringparam section.label.includes.component.label 1 --stringparam toc.section.depth 3" whitepaper.txt
+	echo "Building whitepaper pdf"
+	a2x -L -f pdf -d book --xsltproc-opts="--stringparam section.autolabel 1 --stringparam section.label.includes.component.label 1 --stringparam toc.section.depth 3" --dblatex-opts "-P latex.output.revhistory=0" whitepaper.txt
 
 whitepaper.html: $(DEPS)
-	echo "Building html"
+	echo "Building whitepaper html"
 	asciidoc -d book -a toc -a toclevels=4 -a numbered whitepaper.txt
+
+
+messages.pdf: $(DEPS)
+	echo "Building message pdf"
+	a2x -L -f pdf -d article --dblatex-opts "-P latex.output.revhistory=0 -Pdoc.layout=\"coverpage frontmatter mainmatter \"" messages.txt
+
+messages.html: $(DEPS)
+	echo "Building message html"
+	asciidoc -d book -a toc -a toclevels=4 -a numbered messages.txt
 
 clean:
 	rm -rf *~ *.pdf *.html *.xml *.fo
