--- a/whitepapers/Makefile
+++ b/whitepapers/Makefile
@@ -2,7 +2,7 @@
 .PHONY: all clean
 
 #add dependencies here (.dia files are automatically converted to .png if dia is installed)
-DEPS := safir_logging.txt new_distribution.txt messages.txt block-diagram.png sp_raw_pub_sub.png com_pgm.png Makefile
+DEPS := safir_logging.txt new_distribution.txt messages.txt readonly_install.txt block-diagram.png sp_raw_pub_sub.png com_pgm.png Makefile
 
 default: all
 
@@ -12,7 +12,7 @@ help:
 	echo "   new_distribution.html - build single page html" 
 	echo " Check the Makefile for other targets"
 
-all: new_distribution.pdf new_distribution.html messages.pdf messages.html safir_logging.pdf safir_logging.html
+all: new_distribution.pdf new_distribution.html messages.pdf messages.html readonly_install.pdf readonly_install.html safir_logging.pdf safir_logging.html
 
 
 vpath %.dia images
@@ -36,6 +36,15 @@ messages.pdf: $(DEPS)
 messages.html: $(DEPS)
 	echo "Building message html"
 	asciidoc -d book -a toc -a toclevels=4 -a numbered messages.txt
+
+readonly_install.pdf: $(DEPS)
+	echo "Building message pdf"
+	a2x -L -f pdf -d article --dblatex-opts "-P latex.output.revhistory=0 -Pdoc.layout=\"coverpage frontmatter mainmatter \"" readonly_install.txt
+
+readonly_install.html: $(DEPS)
+	echo "Building message html"
+	asciidoc -d book -a toc -a toclevels=4 -a numbered readonly_install.txt
+
 
 safir_logging.pdf: $(DEPS)
 	echo "Building safir_logging pdf"
