--- a/whitepapers/Makefile
+++ b/whitepapers/Makefile
@@ -38,11 +38,11 @@ messages.html: $(DEPS)
 	asciidoc -d book -a toc -a toclevels=4 -a numbered messages.txt
 
 readonly_install.pdf: $(DEPS)
-	echo "Building message pdf"
+	echo "Building readonly_install pdf"
 	a2x -L -f pdf -d article --dblatex-opts "-P latex.output.revhistory=0 -Pdoc.layout=\"coverpage frontmatter mainmatter \"" readonly_install.txt
 
 readonly_install.html: $(DEPS)
-	echo "Building message html"
+	echo "Building readonly_install html"
 	asciidoc -d book -a toc -a toclevels=4 -a numbered readonly_install.txt
 
 
